--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,65 @@
 	.input {
 		@apply text-base block bg-[#eee] p-[.625rem] w-full border border-[#eee] rounded-md transition focus:outline-0 focus:border-[#fb1] focus:bg-white focus:shadow-[0_0_0_3px_#fea] hover:outline-0 hover:border-[#fb1] hover:bg-white hover:shadow-[0_0_0_3px_#fea];
 	}
+
 	.btn {
 		@apply text-base font-primary text-[#764701] text-center bg-[#fb1] rounded-md py-3 px-5 w-32 focus:shadow-btn hover:shadow-btn focus:outline-none disabled:opacity-50 disabled:cursor-wait;
 	}
-	.title {
-		@apply text-5xl text-[#333] w-max font-secondary my-4 relative z-10 after:block after:w-6 after:h-6 after:rounded after:bg-[#fb1] after:absolute after:bottom-1 after:-left-1 after:-z-10;
+
+	.user-nav {
+		@apply block sm:grid sm:grid-cols-4 sm:gap-4 absolute sm:static right-0 top-[70px] px-4 sm:px-0 bg-white sm:bg-transparent shadow-[0_1px_2ox_rgba(0,0,0,.2)] sm:shadow-none opacity-0 sm:opacity-100 rounded translate-x-[-10px] sm:translate-x-0 pointer-events-none sm:pointer-events-auto;
 	}
+
+	.user-btns {
+		@apply flex sm:justify-center items-center h-10 w-full sm:w-10 sm:bg-[#eee] py-2 sm:p-0 border border-b-[#eee] sm:border-transparent rounded cursor-pointer transition-all duration-200 focus:bg-white focus:border-[#333] focus:outline-none focus:shadow-[0_0_0_3px_#eee] hover:bg-white hover:border-[#333] hover:outline-none hover:shadow-[0_0_0_3px_#eee];
+	}
+
+	.user-btn-mobile {
+		@apply user-btns justify-center w-10 p-0 after:block after:bg-current after:w-5 after:h-[2px] after:rounded-sm after:shadow-[0_6px_currentColor,0_-6px_currentColor] after:transition-all duration-200 focus:shadow-[0_0_0_3px_#fea] focus:border-[#fb1] focus:text-[#fb1] hover:shadow-[0_0_0_3px_#fea] hover:border-[#fb1] hover:text-[#fb1];
+	}
+
+	.user-btns-mobile {
+		@apply flex items-center bg-none w-full border-b border-b-[#eee] py-2 cursor-pointer;
+	}
+
+	.title {
+		@apply text-4xl sm:text-5xl text-[#333] w-max font-secondary my-4 relative z-10 after:block after:w-6 after:h-6 after:rounded after:bg-[#fb1] after:absolute after:bottom-1 after:-left-1 after:-z-10;
+	}
+}
+
+nav a.active,
+nav a.active:focus {
+	background: white;
+	box-shadow: 0 0 0 3px #fea;
+	border-color: #fb1;
+}
+
+nav a.active svg > * {
+	fill: #fb1;
+}
+
+.user-btn-mobile-active {
+	outline: none;
+	background: white;
+	border-color: #fb1;
+	color: #fb1;
+	box-shadow: 0 0 0 3px #fea;
+}
+
+.user-btn-mobile-active::after {
+	transform: rotate(90deg);
+	width: 4px;
+	height: 4px;
+	box-shadow: 0 8px currentColor, 0 -8px currentColor;
+}
+
+.user-btns-mobile:hover svg > * {
+	fill: #fb1;
+}
+
+.user-btns-mobile.active,
+.user-btns-mobile.active:focus {
+	box-shadow: none;
+	border: none;
+	border-bottom: 1px solid #eee;
 }
