(add) skeleton das imagens ao serem carregadas e Loading animado | (update) feed de usuario alterado para mostrar apenas as postagens do usuario | (fix) ultimo commit nao foram adicionadas as rotas de perfil e postagens, serao adicionadas em breve

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,12 @@
 	}
 }
 
+#root {
+	display: flex;
+	flex-direction: column;
+	min-height: calc(100vh + 10rem);
+}
+
 nav a.active,
 nav a.active:focus {
 	background: white;
